# roads-management-insights-samples

./: .gitignore  LICENSE  README.md
route-registration-tool/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bq_setup.sh  cloudbuild.yaml  cloudbuild_single_prod.yaml  docker-compose.yml  pyproject.toml
route-registration-tool/server/: area.py  main.py
route-registration-tool/server/core/: db_setup.py
route-registration-tool/server/db/: common.py  database.py  sqlite.py
route-registration-tool/server/routes/: all_routes.py  batch_save.py  bigquery.py  client_config.py  export.py  file_upload.py  import_project.py  intersections.py  polygon_routes_api.py  projects.py  projects_list.py  pubsub.py  roads.py  roads_connectivity.py  routes.py  routes_status.py  segmentation.py  stretch_roads.py  sync.py  sync_status_route.py  tag_routes.py  tiles.py  users.py  verify_details_route.py
route-registration-tool/server/utils/: auth.py  check_routes_status.py  compute_parent_sync_status.py  connection_manager.py  create_engine.py  feature_flags.py  firebase_logger.py  get_routes_status.py  google_roads_api.py  intersection_points.py  listening_to_pub_sub.py  polygon_roads_api.py  project_list.py  pubsub_updates.py  route_operations_logger.py  routes_sync_status.py  segment.py  spatial_helpers.py  sql_connectivity.py  stretch.py  sync_routes.py  sync_single_route.py  tag.py  verify_project_details.py  viewstate_calculator.py
route-registration-tool/tests/: test_db_backend_factory.py  test_projects_repo_create.py
route-registration-tool/ui/: .gitignore  .prettierrc  env.example  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
route-registration-tool/ui/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
sample-app/: .env.example  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  rmi_setup.py  server.py
sample-app/backend/: env_manager.py  fetch_data.py
sample-app/data/map-style/: exported_style.json
sample-app/docs/calculations/: usecase1.md  usecase2.md  usecase3.md
sample-app/ui/: README-UI.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
sample-app/ui/src/: App.tsx  index.css  (+2 more)
(+339 files in other folders)
