[project]
name = "route-registration-tool"
version = "0.1.0"
description = ""
authors = [
    {name = "Lepton Software",email = "team@leptonmaps.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "brotli-asgi (>=1.4.0,<2.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "mapbox-vector-tile (==2.2.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "datetime (>=5.5,<6.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "google-cloud-pubsub (>=2.33.0,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "google-cloud-resource-manager (==1.15.0)",
    "google-cloud-storage (>=2.10.0,<3.0.0)",
    "polyline (==2.0.3)",
    "pyproj (>=3.6.0,<4.0.0)",
    "geojson (>=3.1.0,<4.0.0)",
    "python-multipart (>=0.0.6,<1.0.0)",
    "google-cloud-bigquery (>=3.10.0,<4.0.0)",
    "geopy (>=2.3.0,<3.0.0)",
    "gdal (==3.8.4)",
    "google-cloud-firestore (>=2.15.0,<3.0.0)",
    "aiohttp (>=3.9.0,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
